<resources>
    <string name="app_name">La Última Chance AGS</string>
    <string name="greeting">Hola, ¿qué tal?</string>
    <string name="title_activity_botanas">Botanas</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Carrito</string>
    <string name="title_notifications">Mi cuenta</string>
    <string name="title_activity_lacteos">Lácteos</string>
    <string name="title_activity_bebidas">Bebidas</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="crearcuenta">Crear cuenta</string>
    <string name="email">Email</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidosucontrasena">¿Olvidó su contraseña?</string>
    <string name="aun_no_tiene_una_cuenta_crear_cuenta">¿Aún no tiene una cuenta? Crear cuenta</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tiene_una_cuenta_iniciar_sesion">¿Ya tiene una cuenta? Iniciar sesión</string>


    //Terminos y Condiciones
    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
    <string name="TerminosCnt">Es requisito necesario para la adquisición de los servicios que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los servicios que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. \nEn algunos casos, para adquirir un servicio, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña. \nEl usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la solicitud de alguno de nuestros servicios. La Última Chance Ags no asume la responsabilidad en caso de que entregue dicha clave a terceros.</string>
    <string name="aviso_de_privacidad">Aviso de Privacidad</string>
    <string name="PrivacidadCnt">En cumplimiento con lo establecido por la Ley Federal de Protección de Datos Personales en Posesión de Particulares, La Última Chance Ags Comercio Electrónico SA de CV, en lo sucesivo señalada como \'La Última Chance Ags\', ubicado en Lic. Adolfo López Mateos 408-Local A. Col. Centro C.P 20000 en Aguascalientes, Aguascalientes, México, como Responsable de sus Datos Personales hacen de su conocimiento la política de privacidad y manejo de datos personales, en la que en todo momento buscarán que el tratamiento de los mismos sea legítimo, controlado e informado, a efecto de asegurar la privacidad, confidencialidad, integridad y el derecho a la autodeterminación informativa de sus datos.</string>
    <string name="politicas_de_envios_y_devoluciones">Políticas de Envíos y Devoluciones</string>
    <string name="PoliEnviosCnt">Los precios publicados en el sitio NO incluyen costo de envío dentro de la República Mexicana salvo cuando expresamente lo indique algún equipo o alguna promoción en particular, los precios de los productos pueden cambiar en cualquier momento sin previo aviso, no se pueden combinar promociones de otros medios distintos a los presentados en este sitio. El cliente se compromete a proporcionar una dirección válida localizable dentro de la república mexicana donde pueda entregársele el pedido. En caso de que el cliente proporcione una dirección que no sea localizada por la paquetería, cualquier otro costo adicional será cubierto por el cliente mismo.</string>


    //Finalizar compra
    <string name="gracias_por_su_compra">Gracias Por Su Compra</string>
    <string name="n_mero_de_compra">Número de compra:</string>

    //titulo de activities
    <string name="title_activity_MisPedidos">Mis Pedidos</string>
    <string name="title_activity_Terminos">Terminos y sobre la Aplicación</string>
    <string name="title_activity_Configuracion">Configuración</string>
    <string name="title_activity_MiCuenta">Mi Cuenta</string>
    <string name="title_activity_ubicanos">Ubícanos</string>

    //Configuración
    <string name="notificaciones">Notificaciones</string>
    <string name="idioma">Idioma</string>
    <string name="permisos">Permisos</string>
    <string name="contacto">Contacto</string>
    <string name="evaluar_aplicacion">Evaluar Aplicación</string>

    //Mi cuenta
    <string name="informaci_n_general">Información General</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="mis_cuentas_de_pago">Mis Cuentas de Pago</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //Pago
    <string name="ingresarCuentaPaypal">ingresarCuentaPaypal</string>
    <string name="ingresarCuentaMercadopago">ingresarCuentaMercadopago</string>
    <string name="ingresarPaypal">Ingresar</string>
    <string name="ingresarMercadopago">Ingresar</string>
</resources>