<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Configuracion">

    <TextView
        android:id="@+id/textView_Configuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/title_activity_Configuracion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_idioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/idioma"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button_Permisos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/permisos"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button_Terminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/title_activity_Terminos"
        android:textAlignment="viewStart"
        android:onClick="btnTerminos"/>

    <Button
        android:id="@+id/button_Contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/contacto"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button_Evaluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/evaluar_aplicacion"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button_Ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="#C80000"
        android:text="@string/title_activity_ubicanos"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:onClick="btnUbicanos"/>
</LinearLayout>